[FIX] Buttons alignement

--- a/myscript-text.css
+++ b/myscript-text.css
@@ -28,8 +28,5 @@ myscript-common-element {
     position: absolute;
     z-index: 2;
 }
-.myscript-text-container {
-    height: 100%;
-}
 
 
